add css margin-right

--- a/propriedades-css/margin-right.html
+++ b/propriedades-css/margin-right.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>margin-top</title>
+    <title>margin-right</title>
     <style type="text/css">
         body {
             margin: 0;
             padding: 0;
+            display: flex;
         }
 
         .block {
-            width: 50vw;
-            height: 70vh;
-            margin-top: 5%;
+            width: 20vw;
+            height: 50vh;
+            margin-right: 5%;
             background-color: #487eb0;
-            display: inline-block;
         }
     </style>
 </head>
 <body>
+    <div class="block"></div>
     <div class="block"></div>
 </body>
 </html>
