--- a/propriedades-css/padding-top.html
+++ b/propriedades-css/padding-top.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>padding-top</title>
     <style type="text/css">
+        * {
+            box-sizing: border-box;
+        }
+        
         body {
             margin: 0;
             padding: 0;
