update css border-top-right-radius

--- a/propriedades-css/border-top-right-radius.html
+++ b/propriedades-css/border-top-right-radius.html
@@ -20,7 +20,7 @@
             border-color: #e1b12c;
             border-width: 20px;
             border-style: dashed;
-            border-top-right-radius: 50% 10%;
+            border-top-right-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -30,6 +30,7 @@
             width: 200px;
             height: 200px;
             background-color: red;
+            border-top-right-radius: inherit;
         }
     </style>
 </head>
