update css box-sizing

--- a/propriedades-css/box-sizing.html
+++ b/propriedades-css/box-sizing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>box-sizing</title>
     <style type="text/css">
-        * {
+        .bs {
             box-sizing: border-box;
         }
 
@@ -13,10 +13,12 @@
             width: 300px;
             height: 300px;
             padding: 100px;
+            background-color: lawngreen;
         }
     </style>
 </head>
 <body>
     <div>Hcode.com.br</div>
+    <div class="bs"></div>
 </body>
 </html>
