update css box-sizing

--- a/propriedades-css/box-sizing.html
+++ b/propriedades-css/box-sizing.html
@@ -14,6 +14,7 @@
             height: 300px;
             padding: 100px;
             background-color: lawngreen;
+            border: 5px dotted #000;
         }
     </style>
 </head>
