update css outline-style

--- a/propriedades-css/outline-style.html
+++ b/propriedades-css/outline-style.html
@@ -22,6 +22,7 @@
             outline-width: 20px;
             border: 10px dashed yellow;
             color: #fff;
+            margin: 20px;
         }
     </style>
 </head>
